objects/Account.object
<CustomObject>
    <fields>
        <fullName>No_Certificate_Requested__c</fullName>
        <label>No Certificate Requested</label>
        <summaryFilterItems>
            <field>Affiliate_Event__c.Event_Type__c</field>
            <operation>equals</operation>
            <value>Certificate Request - Insurance</value>
        </summaryFilterItems>
        <summaryForeignKey>Affiliate_Event__c.Affiliate_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Systems_Consultation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Systems Consultation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Systems_Consultation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Systems Consultation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Female_Contra_Clients_AASC__c</fullName>
        <label>DAD Female Contra Clients AASC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_External_Client_Visit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last External Client Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Kickoff_Planning_Call__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Kickoff Planning Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Training_Exhibit_Hall__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Training &amp; Exhibit Hall</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_External_Client_Visit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next External Client Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Kickoff_Planning_Call__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Kickoff Planning Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Training_Exhibit_Hall__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Training &amp; Exhibit Hall</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>abortionProceduresQVOL_YTD__c</fullName>
        <label>Abortion Procedures QVOL YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abortion_Procedures_QVOL_Q1__c</fullName>
        <label>DAD Abortion Procedures QVOL Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abortion_Procedures_QVOL_Q2__c</fullName>
        <label>DAD Abortion Procedures QVOL Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abortion_Procedures_QVOL_Q3__c</fullName>
        <label>DAD Abortion Procedures QVOL Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Affiliate_Office_Visit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Affiliate Office Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Affiliate_Office_Visit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Affiliate Office Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Affiliate_Board_Meeting__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Affiliate Board Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Affiliate_Board_Meeting__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Affiliate Board Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Contract_Review_Requested__c</fullName>
        <label>No Contract Review Requested</label>
        <summaryFilterItems>
            <field>Affiliate_Event__c.Event_Type__c</field>
            <operation>equals</operation>
            <value>Contract Review Request</value>
        </summaryFilterItems>
        <summaryForeignKey>Affiliate_Event__c.Affiliate_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sexual_Molestation_Liability__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sexual Molestation Liability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Virtual_Support_Training__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Virtual Support/Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Virtual_Support_Training__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Virtual Support/Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Visits_QVOL_YTD_Formula__c</fullName>
        <description>Total Visits QVOL YTD</description>
        <formula>/*
Total_Visits_QVOL_Q1__c +
Total_Visits_QVOL_Q2__c +
Total_Visits_QVOL_Q3__c +
Total_Visits_QVOL_Q4__c
*/
IF(
And(Total_Visits_QVOL_Q1__c &gt;= 0,
Total_Visits_QVOL_Q2__c &gt;= 0,
Total_Visits_QVOL_Q3__c &gt;= 0,
Total_Visits_QVOL_Q4__c &gt;= 0),
Total_Visits_QVOL_Q1__c +
Total_Visits_QVOL_Q2__c +
Total_Visits_QVOL_Q3__c +
Total_Visits_QVOL_Q4__c,
IF(
And(Total_Visits_QVOL_Q1__c &gt;= 0,
Total_Visits_QVOL_Q2__c &gt;= 0,
Total_Visits_QVOL_Q3__c &gt;= 0),
Total_Visits_QVOL_Q1__c +
Total_Visits_QVOL_Q2__c +
Total_Visits_QVOL_Q3__c,
IF(
And(Total_Visits_QVOL_Q1__c &gt;= 0,
Total_Visits_QVOL_Q2__c &gt;= 0),
Total_Visits_QVOL_Q1__c +
Total_Visits_QVOL_Q2__c, Total_Visits_QVOL_Q1__c
)))</formula>
        <inlineHelpText>Total Visits QVOL YTD</inlineHelpText>
        <label>Total Visits QVOL YTD Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>miscarriageManagementQVOL_YTD__c</fullName>
        <label>Miscarriage Mgmt QVOL YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Planning_Committee_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Planning Committee Detail</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Miscarriage_Management_QVOL_Q1__c</fullName>
        <label>DAD Miscarriage Mgmt QVOL Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscarriage_Management_QVOL_Q2__c</fullName>
        <label>DAD Miscarriage Mgmt QVOL Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscarriage_Management_QVOL_Q3__c</fullName>
        <label>DAD Miscarriage Mgmt QVOL Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Accreditation_Date__c</fullName>
        <description>To track the most  recent accreditation date at the affiliate.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This data will be populated by the System Administrators.</inlineHelpText>
        <label>Most Recent Accreditation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Planning_Committee_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Planning Committee Detail</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Services_Clinical_Staff__c</fullName>
        <label>Patient Services Clinical Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Patients_QVOL_YTD_formula__c</fullName>
        <description>Do not Put on Page Layout, Used for field update &quot;Total Patients QVOL YTD&quot;</description>
        <formula>/*
Total_Patients_QVOL_Q1__c + 
Total_Patients_QVOL_Q2__c + 
Total_Patients_QVOL_Q3__c + 
Total_Patients_QVOL_Q4__c
*/

IF(
And(Total_Patients_QVOL_Q1__c &gt;= 0,
Total_Patients_QVOL_Q2__c &gt;= 0,
Total_Patients_QVOL_Q3__c &gt;= 0,
Total_Patients_QVOL_Q4__c &gt;= 0),
Total_Patients_QVOL_Q1__c +
Total_Patients_QVOL_Q2__c +
Total_Patients_QVOL_Q3__c +
Total_Patients_QVOL_Q4__c,
IF(
And(Total_Patients_QVOL_Q1__c &gt;= 0,
Total_Patients_QVOL_Q2__c &gt;= 0,
Total_Patients_QVOL_Q3__c &gt;= 0),
Total_Patients_QVOL_Q1__c +
Total_Patients_QVOL_Q2__c +
Total_Patients_QVOL_Q3__c,
IF(
And(Total_Patients_QVOL_Q1__c &gt;= 0,
Total_Patients_QVOL_Q2__c &gt;= 0),
Total_Patients_QVOL_Q1__c +
Total_Patients_QVOL_Q2__c, Total_Patients_QVOL_Q1__c
)))</formula>
        <inlineHelpText>Do not Put on Page Layout, Used for field update &quot;Total Patients QVOL YTD&quot;</inlineHelpText>
        <label>Total Patients QVOL YTD formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education_Communication_Outreach__c</fullName>
        <label>Education/Communication Outreach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Accreditation_Status__c</fullName>
        <inlineHelpText>This field will be updated by the System Administrator.</inlineHelpText>
        <label>Most Recent Accreditation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Human_Resources_Volunteer_Support__c</fullName>
        <label>Human Resources/Volunteer Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Request_Completion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date that the Contract Review Request - Insurance/Legal was completed. Populated automatically via Process Flow based on Date Request Completed date.</inlineHelpText>
        <label>Contract Review Request Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Certificate_Request_Insurance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Certificate Request - Insurance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Certificate_Request_Insurance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Certificate Request - Insurance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exec_Management_Admin_Support_Staff__c</fullName>
        <label>Executive Management/Admin Support Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Accreditation_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Activity Accreditation Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Program_of_Interest_TeamSTEPPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Program of Interest: TeamSTEPPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Activity_Accreditation_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Activity Accreditation Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Affiliate_Invoicing_and_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated automatically via Process Flow based on Event End Date</inlineHelpText>
        <label>Last Affiliate Invoicing and Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Program_of_Interest_CAL_Courses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Program of Interest: CAL Courses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Affiliate_Invoicing_and_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Affiliate Invoicing and Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Services_Administrative_Staff__c</fullName>
        <label>Patient Services Administrative Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Information_Technology_Online_Services__c</fullName>
        <label>Information Technology/Online Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Contract_Review_Request_Insurance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Contract Review Request - Insurance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Program_of_Interest_Accreditation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Program of Interest: Accreditation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Contract_Review_Request_Insurance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Contract Review Request - Insurance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Program_of_Interest_ARMS_PelvicSim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Program of Interest: ARMS PelvicSim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_Services_Clinical_Support_Staff__c</fullName>
        <label>Patient Services Clinical Support Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Policy_Advocacy_Political_Action__c</fullName>
        <label>Public Policy/Advocacy/Political Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificate_Request_Insurance_Completion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date that the Certificate Request Insurance  completed.  Populated automatically via Process Flow based on Date Request Completed date.</inlineHelpText>
        <label>Certificate Request Insurance Completion</label>
        <type>Date</type>
    </fields>
</CustomObject>